lab03: delete status_id from param in city adding
