# VikingsServer/docs/swagger.json
@@ -126,13 +126,6 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "ID статуса города",
-                        "name": "status_id",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
                         "type": "string",
                         "description": "Описание города",
                         "name": "description",
